Make double-click on text in composer select word again (bug 193689), r=bryner@netscape.com, sr=jst@netscape.com, a=asa@mozilla.org